--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.2.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -48,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"homepage": "https://hyeone22.github.io/kakaotalk_2023"
+  },
+  "homepage": "https://hyeone22.github.io/kakaotalk_2023"
 }
